chore : fix font-size button when on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -335,7 +335,6 @@ footer {
         margin: 1em auto;
         button {
           padding: 15px 40px;
-          font-size: 22px;
         }
       }
     }
